tests/snapshots/file@base@field@method.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  bar(arg) {\n    print arg;\n  }\n}\n\nvar bar = Foo().bar;\nprint \"got method\"; // expect: got method\nbar(\"arg\");          // expect: arg\n"
input_file: crafting_interpreters_test_files/field/method.lox
---
OUT: 
got method
arg

===
ERR:
