tests/snapshots/file@base@field@method_binds_this.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  sayName(a) {\n    print this.name;\n    print a;\n  }\n}\n\nvar foo1 = Foo();\nfoo1.name = \"foo1\";\n\nvar foo2 = Foo();\nfoo2.name = \"foo2\";\n\n// Store the method reference on another object.\nfoo2.fn = foo1.sayName;\n// Still retains original receiver.\nfoo2.fn(1);\n// expect: foo1\n// expect: 1\n"
input_file: crafting_interpreters_test_files/field/method_binds_this.lox
---
OUT: 
foo1
1

===
ERR:
