tests/snapshots/file@base@field@set_on_string.lox.snap
---
source: tests/common/mod.rs
description: "\"str\".foo = \"value\"; // expect runtime error: Only instances have fields.\n"
input_file: crafting_interpreters_test_files/field/set_on_string.lox
---
OUT: 

===
ERR: 
  × only instances have properties
   ╭────
 1 │ "str".foo = "value"; // expect runtime error: Only instances have fields.
   ·       ─┬─
   ·        ╰── here
   ╰────
