tests/snapshots/file@base@for@closure_in_body.lox.snap
---
source: tests/common/mod.rs
description: "var f1;\nvar f2;\nvar f3;\n\nfor (var i = 1; i < 4; i = i + 1) {\n  var j = i;\n  fun f() {\n    print i;\n    print j;\n  }\n\n  if (j == 1) f1 = f;\n  else if (j == 2) f2 = f;\n  else f3 = f;\n}\n\nf1(); // expect: 4\n      // expect: 1\nf2(); // expect: 4\n      // expect: 2\nf3(); // expect: 4\n      // expect: 3\n"
input_file: crafting_interpreters_test_files/for/closure_in_body.lox
---
OUT: 
4
1
4
2
4
3

===
ERR:
